Fix for gallery title overflow

--- a/app/assets/stylesheets/modules/gallery-view.css.scss
+++ b/app/assets/stylesheets/modules/gallery-view.css.scss
@@ -25,11 +25,6 @@ $gallery-document-width: 184px;
     padding-right: 4px;
   }
 
-  .caption h5 {
-    overflow:hidden;
-    max-height: 4.4em;
-  }
-
   .gallery-document {
     position: relative;
     margin: 0px 5px 15px 5px;
@@ -38,6 +33,12 @@ $gallery-document-width: 184px;
     width: $gallery-document-width;
     height: 400px;
     border: 1px solid $panel-inner-border;
+
+    .index_title {
+      a {
+        word-break: break-all;
+      }
+    }
   }
 
   .document-counter {
